--- a/budgeting/static/blog/main.css
+++ b/budgeting/static/blog/main.css
@@ -18,7 +18,7 @@ ul {
 }
 
 .bg-steel {
-  background-color: #ffffff;
+  background-color: #6495ff;
 }
 
 .site-header .navbar-nav .nav-link {
@@ -26,7 +26,7 @@ ul {
 }
 
 .site-header .navbar-nav .nav-link:hover {
-  color: #3f3f3f;
+  color: #78ff86;
 }
 
 .site-header .navbar-nav .nav-link.active {
