--- a/budgeting/templates/budgeting/transaction_detail.html
+++ b/budgeting/templates/budgeting/transaction_detail.html
@@ -11,16 +11,8 @@
       <a class="mr-2" href="#">{{ object.t_type }} from {{object.source}}</a>
       <small class="text-muted">{{ object.date_posted|date:"F d, Y"}}</small>
       <div>
-        <a
-          class="btn btn-secondary btn-sm mt-1 mb-1"
-          href="{%url 'transaction-update' object.id %}"
-          >Update</a
-        >
-        <a
-          class="btn btn-danger btn-sm mt-1 mb-1"
-          href="{%url 'transaction-delete' object.id %}"
-          >Delete</a
-        >
+        <a class="btn btn-secondary btn-sm mt-1 mb-1" href="{% url 'transaction-update' object.id %}">Update</a>
+        <a class="btn btn-danger btn-sm mt-1 mb-1" href="{% url 'transaction-delete' object.id %}">Delete</a>
       </div>
     </div>
     <h2 class="article-title">${{ object.amount }}</h2>
