--- a/budgeting/templates/budgeting/transaction_update.html
+++ b/budgeting/templates/budgeting/transaction_update.html
@@ -6,7 +6,7 @@
     {% csrf_token %}
     <fieldset class="form-group" class="asteriskField">
       <legend class="border-bottom mb-4">
-        {{ t_type }}
+        {{ object.t_type }}
       </legend>
       {{ form|crispy }}
     </fieldset>
