connected category model to transaction

--- a/budgeting/templates/budgeting/home.html
+++ b/budgeting/templates/budgeting/home.html
@@ -108,6 +108,10 @@
           <h2>
             <a class="mr-2" href="{% url 'transaction-detail' transaction.id %}">{{transaction.source}}</a>
           </h2>
+          <h2 class="mr-4">
+              {{transaction.category}}
+          </h2>
+
           {% if transaction.t_type  == 'Expense' %}
           <h2 style="color: red">
             - ${{ transaction.amount }}
