--- a/budgeting/templates/budgeting/base.html
+++ b/budgeting/templates/budgeting/base.html
@@ -52,6 +52,7 @@
           <!-- Navbar Right Side -->
           <div class="navbar-nav">
             {% if user.is_authenticated %}
+            <a class="nav-item nav-link" href="{% url 'category-create' %}">Create Category</a>
             <a class="nav-item nav-link" href="{% url 'transaction-create' parameter='Income' %}">Income</a>
             <a class="nav-item nav-link" href="{% url 'transaction-create' parameter='Expense' %}">Expense</a>
             <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
