--- a/budgeting/templates/budgeting/all_transactions.html
+++ b/budgeting/templates/budgeting/all_transactions.html
@@ -26,6 +26,9 @@
                             <h2>
                                 <a class="mr-2" href="{% url 'transaction-detail' transaction.id %}">{{transaction.source}}</a>
                             </h2>
+                            <h2 class="mr-4">
+                              {{transaction.category}}
+                            </h2>
                             {% if transaction.t_type  == 'Withdrawal' %}
                                 <h2 style="color: red">
                                     - ${{ transaction.amount }}
