--- a/budgeting/templates/budgeting/category_confirm_delete.html
+++ b/budgeting/templates/budgeting/category_confirm_delete.html
@@ -4,12 +4,10 @@
     {% csrf_token %}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">
-        Delete Transaction
+        Delete Category
       </legend>
       <h2>
-        Are you sure you want to delete the transaction: "{{ object.source }}"
-        <br />
-        {{ object.t_type}}-${{object.amount}}
+        Are you sure you want to delete the Category: "{{ object.category }}"?
       </h2>
     </fieldset>
     <div class="form-group">
@@ -18,7 +16,7 @@
       </button>
       <a
         class="btn btn-outline-secondary"
-        href="{% url 'transaction-detail' transaction.id %}"
+        href="{% url 'category-details' %}"
       >
         Cancel
       </a>
