--- a/budgeting/templates/budgeting/about.html
+++ b/budgeting/templates/budgeting/about.html
@@ -5,7 +5,7 @@
 
 <div class="jumbotron">
     <h2>
-      Welcome to Treat Yo Self, a Budgeting Website for your Poor Ass Needs
+      Welcome to Treat Yo Self, a Budgeting Website to track all of your money needs.
     </h2>
 </div>
 <p>Please Register or Log In to start.</p>
