--- a/budgeting/static/budgetcss/main.css
+++ b/budgeting/static/budgetcss/main.css
@@ -1,5 +1,5 @@
 body {
-  background: #fafafa;
+  background: #fdfdfd;
   color: #333333;
   margin-top: 5rem;
 }
@@ -10,7 +10,7 @@ h3,
 h4,
 h5,
 h6 {
-  color: #444444;
+  color: #232323;
 }
 
 ul {
@@ -18,25 +18,29 @@ ul {
 }
 
 .bg-steel {
-  background-color: #5f788a;
+  background-color: #7bf870;
 }
 
 .site-header .navbar-nav .nav-link {
-  color: #cbd5db;
+  color: #000000;
 }
 
 .site-header .navbar-nav .nav-link:hover {
-  color: #ffffff;
+  color: #6e6e6e;
 }
 
 .site-header .navbar-nav .nav-link.active {
   font-weight: 500;
 }
 
+.site-header .navbar-brand {
+  color: #000000;
+}
+
 .content-section {
   background: #ffffff;
   padding: 10px 20px;
-  border: 1px solid #dddddd;
+  border: 1px solid #e6e6e6;
   border-radius: 3px;
   margin-bottom: 20px;
 }
@@ -67,7 +71,7 @@ a.article-title:hover {
 }
 
 .article-metadata a:hover {
-  color: #333;
+  color: #252525;
   text-decoration: none;
 }
 
