--- a/budgeting/templates/budgeting/base.html
+++ b/budgeting/templates/budgeting/base.html
@@ -18,7 +18,7 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
     integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous" />
 
-  <link rel="stylesheet"  href="{% static 'blog/main.css'%}">
+  <link rel="stylesheet"  href="{% static 'budgetcss/main.css'%}">
 
   <script src="../../static/utils/color_generator.js"></script>
 
@@ -50,7 +50,7 @@
             <div class="navbar-nav mr-auto">
                 <!--we take the name of the urls in the urls.py module-->
               <a class="nav-item nav-link" href="{% url 'budgeting-home'%}">Home</a>
-              <a class="nav-item nav-link" href="{% url 'budgeting-about'%}">About</a>
+              <!--<a class="nav-item nav-link" href="{% url 'budgeting-about'%}">About</a>-->
                 {% if user.is_authenticated %}
                     <a class="nav-item nav-link" href="{% url 'all-transactions'%}">All-Transactions</a>
                 {% endif %}
@@ -58,8 +58,8 @@
             <!-- Navbar Right Side -->
             <div class="navbar-nav">
               {% if user.is_authenticated %}
-                <a class="nav-item nav-link" href="{% url 'transaction-create' parameter='Deposit' %}">Deposit</a>
-                <a class="nav-item nav-link" href="{% url 'transaction-create' parameter='Withdraw' %}">Withdraw</a>
+                <a class="nav-item nav-link" href="{% url 'transaction-create' parameter='Income' %}">Income</a>
+                <a class="nav-item nav-link" href="{% url 'transaction-create' parameter='Expense' %}">Expense</a>
                 <a class="nav-item nav-link" href="{% url 'profile' %}">Profile</a>
                 <a class="nav-item nav-link" href="{% url 'logout' %}">Logout</a>
               {% else %}
