--- a/budgeting/templates/budgeting/home.html
+++ b/budgeting/templates/budgeting/home.html
@@ -4,60 +4,34 @@
 
 {% if user.is_authenticated %}
 <!-- PLEASE CHANGE THE BACKGROUND COLOR OMG SO BAD -->
-<div class="jumbotron container-fluid text-center" style="padding-top: 2%;padding-bottom: 2%;">
 
     {% if total.total == None %}
-      <h1 class="display-3"><a href="{% url 'total-create'%}">Enter your current balance</a></h1>
+      <div class="jumbotron container-fluid text-center" style="padding-top: 2%;padding-bottom: 2%;">
+      <h1 class="display-2">
+        Welcome To Treat Yo Self!
+      </h1>
+      </div>
+      <h3 class="display-4 text-center"><a href="{% url 'total-create'%}">Enter your current balance</a></h3>
     {% else %}
-    <!-- <h1><a href="{% url 'total-create'%}"></a></h1> -->
-    <h3>Current Balance:</h3>
-    <h3 class="display-2" style="color:black">${{total.total}}</h3>
-    <hr class="my-2">
-    <!--
-    <div class="row" style="padding-top: 1%">
-      {% if total.monthly_gain == 0 %}
-        <div class="col text-center">
-          <h4>This Month Gained:</h4>
-          <h1 style="color:limegreen">+ $0.00</h1>
-        </div>
-      {% else %}
-          <div class="col text-center">
-            <h4>This Month Gained:</h4>
-            <h1 style="color:limegreen">+ ${{total.monthly_gain}}</h1>
-          </div>
-      {% endif %}
-      {% if total.monthly_spent == None %}
-          <div class="col text-center">
-            <h4>This Month Spent: </h4>
-            <h1 style="color:red">- $0.00</h1>
-          </div>
-      {% else %}
-          <div class="col text-center">
-            <h4>This Month Spent: </h4>
-            <h1 style="color:red">- ${{total.monthly_spent}}</h1>
-          </div>
-      {% endif %}
+    <div class="jumbotron container-fluid text-center" style="padding-top: 2%;padding-bottom: 2%;">
+      <h3>Current Balance:</h3>
+      <h3 class="display-2" style="color:black">${{total.total}}</h3>
     </div>
-    -->
-    <!-- <a href="{% url 'total-create'%}">Amount gained this month: {{total.monthly_gain}}</a></p> -->
-    <!-- <a href="{% url 'total-create'%}">Amount spent this month: {{total.monthly_spent}}</a> -->
     {% endif %}
-
-</div>
-{% if total.transaction_list|length == 0 or total.transaction_list == None %}
-    {% if total.total != None %}
-        <div class="jumbotron text-center" style="margin-left: 15%; margin-right: 15%; padding: 5%">
-          <h4 style="padding-bottom: 5%">
-            Start By Creating a Transaction!
-          </h4>
-          <ul class="list-group">
-            <li class="list-group-item list-group-item-light"><a
-                href="{% url 'transaction-create' parameter='Income' %}">Income</a></li>
-            <li class="list-group-item list-group-item-light"><a
-                href="{% url 'transaction-create' parameter='Expense' %}">Expense</a></li>
-          </ul>
-        </div>
-    {% endif %}
+    {% if total.transaction_list|length == 0 or total.transaction_list == None %}
+        {% if total.total != None %}
+            <div class="jumbotron text-center" style="margin-left: 15%; margin-right: 15%; padding: 5%">
+              <h4 style="padding-bottom: 5%">
+                Create A Transaction!
+              </h4>
+              <ul class="list-group">
+                <li class="list-group-item list-group-item-light"><a
+                    href="{% url 'transaction-create' parameter='Income' %}">Income</a></li>
+                <li class="list-group-item list-group-item-light"><a
+                    href="{% url 'transaction-create' parameter='Expense' %}">Expense</a></li>
+              </ul>
+            </div>
+        {% endif %}
 {% else %}
 
 <div class="text-center">
