--- a/budgeting/templates/budgeting/all_transactions.html
+++ b/budgeting/templates/budgeting/all_transactions.html
@@ -12,7 +12,7 @@
                 </h1>
             </div>
         </div>
-        {% if transactions != None %}
+        {% if transactions.count != 0 %}
             <div class="row">
                 <div class="col-md-8">
                     {% for transaction in transactions %}
