--- a/users/templates/users/register.html
+++ b/users/templates/users/register.html
@@ -6,13 +6,13 @@
             {% csrf_token %}
             <fieldset class="form-group">
                 <legend class="border-bottom mb-4">
-                    Join Today
+                    Sign Up
                 </legend>
                 {{ form|crispy }}
             </fieldset>
             <div class="form-group">
                 <button class="btn btn-outline-info" type="submit">
-                    Sign Up
+                    Create Account
                 </button>
             </div>
         </form>
