--- a/budgeting/templates/budgeting/home.html
+++ b/budgeting/templates/budgeting/home.html
@@ -114,10 +114,10 @@
       <h4 class="demo-text" style="padding-right: 5%">
           Have an easy to read layout of your current budget, monthly expenses, and recent transactions.
       </h4>
-      <img class="front-img" src="{% static 'images/treatyoself1.PNG' %}" alt="HomeImg"/>
+      <img class="front-img" src="{% static 'images/treatyoself1.png' %}" alt="HomeImg"/>
     </section>
     <section class="demo-section">
-      <img class="front-img" src="{% static 'images/treatyoself2.PNG' %}" alt="FormImg"/>
+      <img class="front-img" src="{% static 'images/treatyoself2.png' %}" alt="FormImg"/>
         <h4 class="demo-text" style="padding-left: 5%">
           Fully customize your transactions to the name and down to any notes about the transaction.
       </h4>
